# etl_simples

./: README.md  etl.py  pipeline.py  pyproject.toml
