[tool.poetry]
name = "etl-simples"
version = "0.1.0"
description = ""
authors = ["Guilherme Canfield de Almeida <guilherme.canfield87@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
pyarrow = "^17.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
